word break issues - word breaking is pretty terrible right now - in most usecases the height is expandable so breaking up a word is not - necessary, there are also too many properties that conflict - break word is deprecated, advised to use overflow wrap - but that breaks words when not necessary - word break normal also does not 'act the same' as break word - overflow wrap anywhere is the only alternative but that has bad - browser support - for now I am leaving break word as a fallback to anywhere - mdn states break world should 'probably still work' :/ - there needs to be a rule that will break up a word with a auto hyphen - only when absolutely necessary, not on every chance it gets - hyphens also have terrible browser support rn

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -3,6 +3,7 @@
 html {
 	cursor: default;
 	box-sizing: border-box;
+	overflow-wrap: anywhere;
 	word-break: break-word;
 	background: rgb(25, 1, 44);
 	background: linear-gradient(
